@@ -4,6 +4,7 @@
 
 * Bug Fixes:
   * Fixed a bug with bad cookie parsing
+  * Form::RadioButton#click unchecks other buttons (RF #24159)
 
 === 0.9.1 2009/02/23
 
